CHANNELMGR-1660 Fix scrollbar issue in Firefox

--- a/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
+++ b/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
@@ -16,6 +16,8 @@
 @import 'variables';
 
 content-editor {
+  min-height: 0;
+
   .feedback > :last-child {
     margin-bottom: 0;
   }
